# coursework

./: .gitignore  .xdp-diagram.xmi.part-46HiUf  .~lock.Отчёт.docx#  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  comp_file  compile_commands.json  constants.h  main.cpp  resource.qrc  Отчёт.docx
.qtc_clangd/: compile_commands.json
coursework_autogen/: moc_predefs.h  mocs_compilation.cpp
coursework_autogen/7YTNYDDD2B/: moc_rhomb.cpp  moc_rhomb.cpp.d
coursework_autogen/EARCVCUABT/: moc_parallelepiped.cpp  moc_parallelepiped.cpp.d
coursework_autogen/EWIEGA46WW/: qrc_resource.cpp
coursework_autogen/GDMEC2FCRB/: moc_line.cpp  moc_line.cpp.d
coursework_autogen/GG7VQ6K56N/: moc_myGraphicsView.cpp  moc_myGraphicsView.cpp.d
coursework_autogen/OIYP2VNH46/: moc_myGraphicScene.cpp  moc_myGraphicScene.cpp.d
coursework_autogen/PDH6BJJCOA/: moc_figure.cpp  moc_figure.cpp.d
coursework_autogen/TQNZCBDM3P/: moc_rectangle.cpp  moc_rectangle.cpp.d
coursework_autogen/TXKPOHTVN7/: moc_main_window.cpp  moc_main_window.cpp.d
coursework_autogen/VCNREXAN4N/: moc_myGraphicView.cpp  moc_myGraphicView.cpp.d
coursework_autogen/VCPGCEGKYD/: moc_arrow.cpp  moc_arrow.cpp.d
figures/arrow/: arrow.cpp  arrow.h
main_window/: main_window.cpp  main_window.h  main_window.ui
myGraphicScene/: myGraphicScene.cpp  myGraphicScene.h
myGraphicView/: myGraphicView.cpp  myGraphicView.h
myGraphicsScene/: myGraphicsScene.cpp  myGraphicsScene.h
myGraphicsView/: myGraphicsView.cpp  myGraphicsView.h
randomPoints/: randomPoints.cpp  randomPoints.h
text/: text.cpp  text.h
(+169 files in other folders)
